@@ -18,5 +18,15 @@
     <textarea rows="2" cols="20" class="textarea">textarea 1</textarea>
     <textarea rows="2" cols="20" class="textarea">textarea 2</textarea>
     <textarea rows="2" cols="20" class="textarea">textarea 3</textarea>
+
+    <select class="selectlist">
+      <option value="selectlist 1">Option 1</option>
+    </select>
+    <select class="selectlist">
+      <option value="selectlist 2">Option 2</option>
+    </select>
+    <select class="selectlist">
+      <option value="selectlist 3">Option 3</option>
+    </select>
   </body>
 </html>
