@@ -43,7 +43,7 @@ Then(/^the value of hidden field (\d+) should be "([^"]*)"$/) do |hidden_field_n
   expect(@elements[hidden_field_num.to_i - 1].value).to eql value
 end
 
-When(/^I select the text area with class "([^"]*)"$/) do |class_name|
+When(/^I select the text areas with class "([^"]*)"$/) do |class_name|
   @elements = @page.text_area_elements(:class => class_name)
 end
 
@@ -53,4 +53,16 @@ end
 
 Then(/^the value of text area (\d+) should be "([^"]*)"$/) do |text_area_num, value|
   expect(@elements[text_area_num.to_i - 1].value).to eql value
+end
+
+When(/^I select the select lists with class "([^"]*)"$/) do |class_name|
+  @elements = @page.select_list_elements(:class => class_name)
+end
+
+Then(/^I should have (\d+) select lists$/) do |num_select_lists|
+  expect(@elements.size).to eql num_select_lists.to_i
+end
+
+Then(/^the value of select list (\d+) should be "([^"]*)"$/) do |select_list_num, value|
+  expect(@elements[select_list_num.to_i - 1].value).to eql value
 end
