@@ -2,6 +2,7 @@
 * Enhancements
   * Added #hidden_field_elements to ElementLocators
   * Added #text_area_elements to ElementLocators
+  * Added #select_list_elements to ElementLocators
 === 2016-11-15
 * Enhancements
   * Added #button_elements to ElementLocators
